# Engine

./: .appveyor.yml  .gitignore  .travis.yml  .vimrc  CMakeLists.txt  INSTALLING.md  README.md  config.h.in
Engine/: CMakeLists.txt  config.h.in
Engine/include/: common.h  glutils.h  main.h  utils.h
Engine/include/ECS/: ECS.h  components.h
Engine/include/render_system/: render.h
Engine/src/: glutils.c  main.c  utils.c
Engine/src/ECS/: ECS.c
Engine/src/render_system/: render.c
Engine/tests/: CMakeLists.txt  deps.c
Runner/: CMakeLists.txt
Runner/src/: main.c
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  get-glew.cmake  get-sdl2.cmake  get-sdl2_image.cmake  handle-windows.cmake
include/: config.h
libs/cglm/: CMakeLists.txt
libs/klib/: CMakeLists.txt
src/: CMakeLists.txt  main.c
